# Math_in_Compiletime

./: .gitignore  CMakeLists.txt
include/: Math_in_Compile_Time.hpp
test/: CMakeLists.txt  test.cpp
